--- a/Interfaces/Base.lproj/MainMenu.xib
+++ b/Interfaces/Base.lproj/MainMenu.xib
@@ -4,7 +4,6 @@
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
-        <capability name="box content view" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -1106,62 +1105,46 @@ CA
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <splitView dividerStyle="paneSplitter" translatesAutoresizingMaskIntoConstraints="NO" id="972">
-                    <rect key="frame" x="0.0" y="0.0" width="700" height="609"/>
+                    <rect key="frame" x="0.0" y="0.0" width="700" height="630"/>
                     <subviews>
-                        <box fixedFrame="YES" boxType="custom" borderType="none" borderWidth="0.0" title="Title" titlePosition="noTitle" id="973">
-                            <rect key="frame" x="0.0" y="0.0" width="700" height="298"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <view key="contentView" id="scf-1q-Ljq">
-                                <rect key="frame" x="0.0" y="0.0" width="700" height="298"/>
+                        <scrollView fixedFrame="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="976">
+                            <rect key="frame" x="0.0" y="0.0" width="700" height="310"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <clipView key="contentView" copiesOnScroll="NO" id="TOX-JT-adF">
+                                <rect key="frame" x="0.0" y="0.0" width="700" height="310"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="976">
-                                        <rect key="frame" x="0.0" y="0.0" width="700" height="299"/>
-                                        <clipView key="contentView" id="TOX-JT-adF">
-                                            <rect key="frame" x="0.0" y="0.0" width="700" height="309"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <subviews>
-                                                <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" alternatingRowBackgroundColors="YES" autosaveColumns="NO" rowHeight="15" headerView="1386" id="977" customClass="MessageListView">
-                                                    <rect key="frame" x="0.0" y="0.0" width="700" height="276"/>
-                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                    <size key="intercellSpacing" width="3" height="2"/>
-                                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                    <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
-                                                    <connections>
-                                                        <outlet property="nextKeyView" destination="1DK-2K-uuy" id="Y8N-j9-7XX"/>
-                                                    </connections>
-                                                </tableView>
-                                            </subviews>
-                                        </clipView>
-                                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="1385">
-                                            <rect key="frame" x="0.0" y="-30" width="683" height="15"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </scroller>
-                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="1384">
-                                            <rect key="frame" x="-16" y="23" width="16" height="0.0"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </scroller>
-                                        <tableHeaderView key="headerView" id="1386">
-                                            <rect key="frame" x="0.0" y="0.0" width="700" height="23"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableHeaderView>
-                                    </scrollView>
+                                    <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" autosaveColumns="NO" rowHeight="15" headerView="1386" id="977" customClass="MessageListView">
+                                        <rect key="frame" x="0.0" y="0.0" width="700" height="287"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <size key="intercellSpacing" width="3" height="2"/>
+                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                        <connections>
+                                            <outlet property="nextKeyView" destination="1DK-2K-uuy" id="Y8N-j9-7XX"/>
+                                        </connections>
+                                    </tableView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="976" secondAttribute="bottom" id="c50-HX-j4E"/>
-                                    <constraint firstItem="976" firstAttribute="top" secondItem="scf-1q-Ljq" secondAttribute="top" constant="-1" id="cAr-2Y-FmJ"/>
-                                    <constraint firstItem="976" firstAttribute="leading" secondItem="scf-1q-Ljq" secondAttribute="leading" id="n7v-ai-TKU"/>
-                                    <constraint firstAttribute="trailing" secondItem="976" secondAttribute="trailing" id="nNG-kV-aJ6"/>
-                                </constraints>
-                            </view>
-                            <font key="titleFont" size="11" name="LucidaGrande"/>
-                        </box>
-                        <view id="LXW-5J-Hlt">
-                            <rect key="frame" x="0.0" y="308" width="700" height="301"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </clipView>
+                            <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="1385">
+                                <rect key="frame" x="0.0" y="-30" width="683" height="15"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </scroller>
+                            <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="1384">
+                                <rect key="frame" x="-16" y="23" width="16" height="0.0"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </scroller>
+                            <tableHeaderView key="headerView" id="1386">
+                                <rect key="frame" x="0.0" y="0.0" width="700" height="23"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </tableHeaderView>
+                        </scrollView>
+                        <view id="LXW-5J-Hlt" userLabel="Content View">
+                            <rect key="frame" x="0.0" y="320" width="700" height="310"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <subviews>
                                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="1DK-2K-uuy" customClass="ArticleView">
-                                    <rect key="frame" x="0.0" y="0.0" width="700" height="301"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="700" height="310"/>
                                 </customView>
                             </subviews>
                             <constraints>
@@ -1179,7 +1162,7 @@ CA
                 </splitView>
             </subviews>
             <constraints>
-                <constraint firstItem="972" firstAttribute="top" secondItem="971" secondAttribute="top" id="0hH-JJ-Oc5"/>
+                <constraint firstItem="972" firstAttribute="top" secondItem="971" secondAttribute="top" constant="-1" id="0hH-JJ-Oc5"/>
                 <constraint firstItem="972" firstAttribute="leading" secondItem="971" secondAttribute="leading" id="cMg-LD-Qet"/>
                 <constraint firstAttribute="trailing" secondItem="972" secondAttribute="trailing" id="lLW-Wb-LZK"/>
                 <constraint firstAttribute="bottom" secondItem="972" secondAttribute="bottom" id="vXN-hg-P2Z"/>
@@ -1203,10 +1186,10 @@ CA
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <clipView key="contentView" ambiguous="YES" id="emU-La-Fur">
                         <rect key="frame" x="1" y="1" width="699" height="605"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" ambiguous="YES" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="NgO-hM-mCz" customClass="ExtendedTableView">
-                                <rect key="frame" x="0.0" y="0.0" width="1027" height="605"/>
+                                <rect key="frame" x="0.0" y="11" width="1027" height="605"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1230,7 +1213,7 @@ CA
                         </subviews>
                     </clipView>
                     <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="S05-md-m5A">
-                        <rect key="frame" x="1" y="590" width="699" height="16"/>
+                        <rect key="frame" x="1" y="-15" width="0.0" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="fza-gl-TLT">
