--- a/Interfaces/Base.lproj/MainMenu.xib
+++ b/Interfaces/Base.lproj/MainMenu.xib
@@ -367,7 +367,7 @@
                             </menuItem>
                             <menuItem title="Preferences…" keyEquivalent="," id="129">
                                 <connections>
-                                    <action selector="showPreferencePanel:" target="233" id="234"/>
+                                    <action selector="showWindow:" target="HLa-Gy-vMd" id="Fid-tD-rC8"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Check for Updates" id="1104">
@@ -1469,6 +1469,7 @@ CA
             </connections>
         </customObject>
         <customObject id="HRR-OU-3yj" customClass="ArticleListView"/>
+        <customObject id="HLa-Gy-vMd" customClass="PreferencesWindowController"/>
     </objects>
     <resources>
         <image name="filter-icon" width="16" height="16"/>
