Fix Activity window not reflecting item insertion
Issue #866
- Set the window controller as table view's delegate
- Listen to a notification and reload and resort the data source
- Normalize notification names

--- a/Interfaces/Base.lproj/ActivityViewer.xib
+++ b/Interfaces/Base.lproj/ActivityViewer.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12120"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,7 +19,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES" utility="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="150" y="449" width="450" height="360"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1058"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
             <value key="minSize" type="size" width="200" height="140"/>
             <view key="contentView" wantsLayer="YES" id="7">
                 <rect key="frame" x="0.0" y="0.0" width="450" height="360"/>
@@ -99,6 +99,7 @@
                                                     </dictionary>
                                                 </binding>
                                                 <binding destination="ngT-qn-tsD" name="sortDescriptors" keyPath="sortDescriptors" previousBinding="bPS-SD-icO" id="SRV-SI-VSq"/>
+                                                <outlet property="delegate" destination="-2" id="NOH-oI-tnd"/>
                                             </connections>
                                         </tableView>
                                     </subviews>
